--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -30,16 +30,18 @@
 @media screen and (max-width: 768px) {
     #joinDiv {
         margin-top: 30%;
-        height: 118%;
+        height: auto;
         border-bottom: 1px solid #428bca;
         border-left: none;
+        margin-bottom: 1%;
     }
 
     #createDiv {
         margin-bottom: 5%;
-        height: 118%;
+        height: auto;
         border-bottom: 1px solid #428bca;
         border-left: none;
+        margin-bottom: 1%;
     }
 
     .buttonContainer {
